# fullstack_benchmark

./: .gitignore  README.md  openapi.specs.yaml
backends/django-drf/: manage.py  pyproject.toml
backends/django-drf/app/: models.py  serializers.py  views.py
backends/django-drf/app/migrations/: 0001_initial.py  0002_review_unique_review.py
backends/django-drf/app/tests/: conftest.py  test_movies_view.py  test_reviews_view.py  test_serializers.py
backends/django-drf/benchboxd/: asgi.py  test_settings.py  urls.py  views.py  wsgi.py
backends/django-drf/benchboxd/tests/: test_reset.py
backends/django-drf/users/: permissions.py  serializers.py  views.py
backends/django-drf/users/tests/: test_user_login.py  test_user_registration_viewset.py  test_user_serializer.py
fixtures/: hello.py  pyproject.toml
frontends/react/: .env.dev  package-lock.json  package.json
frontends/react/src/: App.tsx  Layout.tsx  NavBar.tsx
frontends/react/src/api/: apiFetch.ts  auth.ts  movie.ts  review.ts  types.ts
tests/: README.md  auth_stage.yaml  pyproject.toml
